2011-04-05  Mihai Parparita  <mihaip@chromium.org>

        Reviewed by Ojan Vafai.

        Add builders.js to dashboard file list
        https://bugs.webkit.org/show_bug.cgi?id=57899

        Add file added by http://crrev.com/80538 to dashboard file list.

        * TestResultServer/handlers/dashboardhandler.py:

2011-04-05  MORITA Hajime  <morrita@google.com>

        Reviewed by Adam Barth.

        webkit-patch should print git's stderr when git svn dcommit fail
        http://webkit.org/b/57861

        * Scripts/webkitpy/common/checkout/scm.py:

2011-04-05  Mihai Parparita  <mihaip@chromium.org>

        Reviewed by Tony Chang.

        Add --baseline-search-path to NRWT
        https://bugs.webkit.org/show_bug.cgi?id=56233
        
        Add NRWT option to specify additional directories to look for baselines
        (will be used by hardware GPU bots which will have local per-bot
        expectations for some tests)

        * Scripts/webkitpy/common/system/filesystem_mock.py:
        * Scripts/webkitpy/layout_tests/port/base.py:
        * Scripts/webkitpy/layout_tests/port/base_unittest.py:
        * Scripts/webkitpy/layout_tests/run_webkit_tests.py:

2011-04-05  Adam Roben  <aroben@apple.com>

        Strip off /results.html from results URLs before trying to load leaks files from them

        r82734 changed build.webkit.org's "view results" URLs to point straight to the results.html
        files, rather than pointing to the directory that contains them. This is more convenient for
        people browsing build.webkit.org, but confused Leaks Viewer.

        Fixes <http://webkit.org/b/57869> REGRESSION (r82734): Links in Leaks Viewer's Recent Builds
        list don't work

        Reviewed by Joseph Pecoraro.

        * BuildSlaveSupport/build.webkit.org-config/public_html/LeaksViewer/RecentBuildsLoader.js:
        (RecentBuildsLoader.prototype.start): Strip off "/results.html" from the results URL.

2011-04-05  Carol Szabo  <carol@webkit.org>
